# smart-model-selector

./: .dockerignore  .gitignore  .selector_state.json  .workflow记忆_openclaw.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  DEVELOPMENT_LOG_OPENCLAW.md  DEVPREVIEW.md  Dockerfile  README.md  README_EN.md  adapter_openclaw.py  adapter_opencode.py  api_server.py  base_adapter.py  config.yaml  config_loader.py  daemon.py  docker-compose.yml  dual_engine.py  fallback_strategy.py  install.sh  keys.example.json  model-selector.sh  model_selector.py  models_config.json  omo_adapter.py  op.sh  openclaw_selector.py  output_protocol.py  pyproject.toml  requirements.txt  selector_core.py  selector_factory.py  smart_model_dispatcher.py  telemetry.py  version.py
.github/workflows/: ci.yml
skills/: __init__.py
skills/base/: __init__.py
skills/deepseek/: __init__.py
skills/google/: __init__.py
skills/minimax/: __init__.py
