[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-model-selector"
version = "4.1.0"
description = "OpenCode Smart Model Selector - AI model routing system with load balancing and failover"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenCode Team", email = "wuleiyuan@gmail.com"}
]
keywords = [
    "ai", "llm", "model-selector", "api-gateway", "claude", "gpt", "gemini", 
    "deepseek", "opencode", "load-balancer", "failover", "smart-router"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.7.0",
    "jq>=1.7.1",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[project.scripts]
op = "op:main"

[project.urls]
Homepage = "https://github.com/wuleiyuan/opencode-smart-model-selector"
Repository = "https://github.com/wuleiyuan/opencode-smart-model-selector"
Issues = "https://github.com/wuleiyuan/opencode-smart-model-selector/issues"
Wiki = "https://github.com/wuleiyuan/opencode-smart-model-selector/wiki"

[tool.setuptools.packages.find]
where = ["."]
include = ["smart_model_dispatcher*", "model_selector*", "version*", "api_server*", "daemon*", "op*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
